--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -7,6 +7,7 @@ $background-color: darken($card-color, 10%);
 $card-color-hover: lighten($card-color, 8%);
 $card-color-selected: lighten($card-color, 5%);
 
+$small-text: 17px;
 $medium-text: 20px;
 $large-text: 30px;
 $extra-large-text: 40px;
